--- a/genome-analyzer/src/scss/App.scss
+++ b/genome-analyzer/src/scss/App.scss
@@ -12,6 +12,30 @@ body {
 
 }
 
+.inputSection {
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  p {
+    margin-top:10px;
+    margin-left:20px;
+    text-align: left;
+    color:white;
+}
+}
+
+.loadingSection{
+  padding-top:20px;
+  margin-left:20px;
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  p {
+    color:white;
+    margin-left:20px;
+  }
+}
+
 .header{
     display:flex;
     flex-direction: row;
@@ -86,7 +110,6 @@ body {
   z-index: 5;
   background-color:$ink;
   width:100%;
-  height:175px;
 
   h1 {
     color:white;
